metadata/force-app/main/default/objects/CustomName_dTJBm__c/CustomName_dTJBm__c.object-meta.xml
<CustomObject>
    <description>Description_LHTJM</description>
    <label>CustomLabel_VRMrB</label>
    <nameField>
        <label>CustomLabel_VRMrB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VRMrBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>