metadata/force-app/main/default/objects/CustomName_dTJBm__c/fields/CustomField_sXlLa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sXlLa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDULOb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>